--- a/src/css/common.css
+++ b/src/css/common.css
@@ -4,6 +4,8 @@
   padding: 0;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   box-sizing: border-box;
+
+  font-family: 'Montserrat','GmarketSans','Apple SD Gothic Neo', 'Malgun Gothic','Nanum Gothic', 'Noto Sans','sans-serif';
 }
 *::after{
   -webkit-tap-highlight-color: rgba(0,0,0,0);
