--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,3 +2,26 @@
 .main{
 
 }
+
+/* 네비게이션 바 */
+.nav{
+  height: 60px;
+  width: 100%;
+}
+
+/* 첫번째 섹션 영역 스타일 */
+.area1{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  position: relative;
+}
+.area1 .inner {
+  width: 80vw;
+  height: 100%;
+}
+.area1 .nav_bar {
+  width: 20vw;
+  height: 100%;
+  background-color: #333;
+}
