--- a/src/css/common.css
+++ b/src/css/common.css
@@ -6,6 +6,9 @@
   box-sizing: border-box;
 
   font-family: 'Montserrat','GmarketSans','Apple SD Gothic Neo', 'Malgun Gothic','Nanum Gothic', 'Noto Sans','sans-serif';
+  /* font-family: 'Diphylleia', serif;
+  font-family: 'Exo 2', sans-serif;
+  font-family: 'Inter', sans-serif; */
 }
 *::after{
   -webkit-tap-highlight-color: rgba(0,0,0,0);
