--- a/src/css/main.css
+++ b/src/css/main.css
@@ -66,35 +66,96 @@
   padding-top: 60px;
 }
 
-.chapter1 .inner .profile{
-  width: 100%;
+.profile{
   max-width: 1280px;
-  height: 300px;
+  height: 180px;
   padding: 0 40px;
   margin: 0 auto;
+}
+.profile .title{
+  color: #333;
+  font-weight: 700;
+  font-size: 35px;
+}
+.protile-item{
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .img-box{
   width: 30%;
-  height: 100%;
+  height: 170px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .profile-img{
-  width: 250px;
-  height: 250px;
-  border-radius: 50%;
-  background-image: url("../assets/짱구.jpg");
+  width: 150px;
+  height: 100%;
+  border-radius: 10%;
+  background-image: url("../assets/profile.jpeg");
   background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
+  box-shadow: 2px 2px 1px #DFDFDF;;
+}
+.profile-info{
+  width: 70%;
+  color: #333;
+}
+.profile-name{
+  font-weight: 700;
+  font-size: 24px;
+  margin-bottom: 7px;
+}
+.profile-birth{
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 7px;
 }
 
 .line{
   max-width: 1280px;
   margin: 30px auto 0;
   border-bottom: 2px solid #0959A9;
+}
+
+/* 기술 소개 영역 */
+.skill{
+  max-width: 1280px;
+  margin: 30px auto 50px;
+  padding: 0 40px;
+}
+.skill .title{
+  color: #333;
+  font-weight: 700;
+  font-size: 35px;
+}
+.skills-item{
+  width: 100%;
+  color: #333;
+  padding: 0 20px;
+  margin: 10px auto 20px;
+}
+.skills-item .item-contant{
+  font-size: 22px;
+  font-weight: 700;
+  margin-bottom: 15px;
+}
+.skills-item .skills-tiem-box {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+
+}
+.skills-item .skills-tiem-box li{
+  font-size: 18px;
+  color: #FFF;
+  border-radius: 6px;
+  background-color: #5f84a9;
+  padding: 6px 10px;
+  margin-right: 12px;
+}
+.skills-item .skills-tiem-box li:last-child{
+  margin-right: 0;
 }
