--- a/src/css/main.css
+++ b/src/css/main.css
@@ -64,60 +64,43 @@
 .chapter1 .inner{
   height: 100vh;
   padding-top: 60px;
+  color: #0959A9;
 }
 
 .profile{
   max-width: 1280px;
-  height: 180px;
   padding: 0 40px;
   margin: 0 auto;
 }
 .profile .title{
-  color: #333;
-  font-weight: 700;
-  font-size: 35px;
+  font-weight: 400;
+  font-size: 20px;
+  border-bottom: 1px solid #0959A9;
 }
 .protile-item{
   display: flex;
   align-items: center;
-  justify-content: center;
-}
-.img-box{
-  width: 30%;
-  height: 170px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: start;
+  padding: 0 15px;
+  margin: 10px auto;
 }
 .profile-img{
-  width: 150px;
+  width: 100px;
   height: 100%;
   border-radius: 10%;
-  background-image: url("../assets/profile.jpeg");
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-size: cover;
   box-shadow: 2px 2px 1px #DFDFDF;;
 }
 .profile-info{
-  width: 70%;
   color: #333;
+  font-weight: 400;
+  font-size: 18px;
+  padding-left: 10px;
 }
 .profile-name{
-  font-weight: 700;
-  font-size: 24px;
   margin-bottom: 7px;
 }
 .profile-birth{
-  font-size: 20px;
-  font-weight: 700;
   margin-bottom: 7px;
-}
-
-.line{
-  max-width: 1280px;
-  margin: 30px auto 0;
-  border-bottom: 2px solid #0959A9;
 }
 
 /* 기술 소개 영역 */
@@ -127,35 +110,42 @@
   padding: 0 40px;
 }
 .skill .title{
-  color: #333;
-  font-weight: 700;
-  font-size: 35px;
+  font-weight: 400;
+  font-size: 20px;
+  border-bottom: 1px solid #0959A9;
 }
 .skills-item{
   width: 100%;
   color: #333;
-  padding: 0 20px;
+  padding: 0 15px;
   margin: 10px auto 20px;
 }
-.skills-item .item-contant{
-  font-size: 22px;
-  font-weight: 700;
-  margin-bottom: 15px;
-}
-.skills-item .skills-tiem-box {
+.skills-item .skills-tiems {
   display: flex;
   justify-content: start;
   align-items: center;
-
+  width: 100%;
+  white-space: normal;
 }
-.skills-item .skills-tiem-box li{
+.skills-item .skills-tiems li{
   font-size: 18px;
-  color: #FFF;
+  color: #333;
   border-radius: 6px;
-  background-color: #5f84a9;
+  border: 1px solid #5f84a9;
   padding: 6px 10px;
   margin-right: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.skills-item .skills-tiem-box li:last-child{
+.skills-item .skills-tiems li:last-child{
   margin-right: 0;
+}
+.skill-icon{
+  width: 18px;
+  height: 18px;
+  margin-right: 5px;
+}
+.skill-icon.oracle{
+  height: 13px;
 }
