--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,7 +3,7 @@
   position: relative;
 }
 
-/* 배너 이미지 */
+/**** 배너 이미지 ****/
 .mainbanner{
   width: 100%;
   height: 100vh;
@@ -18,28 +18,62 @@
   bottom: 0;
 }
 
-/* 슬로건 영역 */
+/**** 공통 부분 ****/
+/* 이너 영역 */
+.inner{
+  max-width: 1280px;
+  height: 100%;
+  margin: 0 auto;
+  padding: 15px 40px;
+  position: relative;
+  color: #0959A9;
+}
+/* 타이틀 */
+.title{
+  font-weight: 400;
+  font-size: 20px;
+  border-bottom: 1px solid #0959A9;
+  padding-bottom: 6px;
+}
+/* 메인 챕터 영역 */
+.chapter{
+  height: 100%;
+  position: relative;
+  background-color: #FFF;
+  color: #0959A9;
+}
+
+
+/**** 슬로건 영역 ****/
 .slogan {
   height: 100vh;
   position: relative;
   background-color: #FFF;
-}
-.slogan .inner{
-  height: 100%;
+  color: #0959A9;
 }
 .slogan .inner .contant{
   width: 100%;
-  max-width: 1280px;
-  height: 100%;
-  margin: 0 auto;
-  padding: 70px 40px 0;
+  margin: 50px auto 150px;
 }
 .slogan .inner .contant > p{
   font-size: 62px;
   font-weight: 500;
-  color: #0959A9;
   font-family: 'Noto Serif KR', serif;
-  margin-bottom: 42px;
+  margin-bottom: 40px;
+}
+.slogan .inner .contant-eng{
+  width: 100%;
+  margin: 0 auto;
+}
+.slogan .inner .contant-eng > p{
+  font-size: 20px;
+  font-weight: 500;
+  font-family: 'Noto Serif KR', serif;
+  margin-bottom: 10px;
+}
+.dot{
+  font-weight: 400;
+  font-size: 50px;
 }
 .downpoint{
   position: absolute;
@@ -51,77 +85,104 @@
   color: #0959A9;
 }
 
-/* 챕터 영역 */
-.chapter{
-  height: 100%;
-  position: relative;
-  background-color: #FFF;
-}
-.chapter .inner{
 
-}
-
-/* 챕터1 영역 */
+/**** 챕터1 영역 ****/
 .chapter1{
   height: 100vh;
-  position: relative;
-  background-color: #FFF;
 }
-.chapter1 .inner{
-  height: 100%;
-  padding-top: 60px;
-  color: #0959A9;
+.chapter1 > .inner{
+  padding-top: 40px;
 }
-
 .about{
-  max-width: 1280px;
-  padding: 0 40px;
-  margin: 0 auto;
-}
-.title{
-  font-weight: 400;
-  font-size: 20px;
-  border-bottom: 1px solid #0959A9;
-  padding-bottom: 4px;
+  margin-bottom: 80px;
 }
 .profile{
   display: flex;
   align-items: center;
   justify-content: start;
   padding: 0 15px;
-  margin: 10px auto;
+  margin: 40px auto 0;
 }
 .profile-img{
-  width: 100px;
-  height: 100%;
-  border-radius: 10%;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background-image: url("../assets/profile.jpeg");
+  background-size: 130%;
+  background-position: 80% 100%;
+  background-repeat: no-repeat;
   box-shadow: 2px 2px 1px #DFDFDF;;
 }
 .profile-info{
   color: #333;
-  font-weight: 400;
-  font-size: 18px;
-  padding-left: 10px;
+  margin: 0 30px;
+  font-weight: 700;
+}
+.profile-item{
+  width: 100%;
+  margin-bottom: 15px;
+}
+.skills-tiems.profile{
+  margin: 0;
+  padding: 0;
 }
 .profile-name{
-  margin-bottom: 7px;
+  font-size: 26px;
+  margin-bottom: 20px;
 }
 .profile-birth{
-  font-size: 18px;
-  margin-left: 7px;
+  font-size: 22px;
 }
+.profile-contant{
+  font-size: 16px;
+  margin-bottom: 4px;
+}
+.skills-tiems.profile li{
+  font-size: 13px;
+  color: #FFF;
+  background-color: #5f84a9;
+  border: 1px solid #5f84a9;
+  border-radius: 6px;
+  padding: 4px 6px;
+  margin: 0 12px 0 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.skills-tiems.profile li:last-child{
+  margin-right: 0;
+}
+
+
 
 /* 기술 소개 영역 */
 .skill{
-  max-width: 1280px;
-  margin: 30px auto;
-  padding: 0 40px;
+}
+.skill-content{
+  margin: 20px auto;
+  padding: 0 15px;
+}
+.skill-sub-title{
+  /* color: #333; */
+  color: #0959A9;
+  font-size: 18px;
+  font-weight: 700;
 }
 .skills-item{
-  width: 100%;
-  color: #333;
-  padding: 0 15px;
-  margin: 20px auto;
+  color: #8D9093;
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  margin: 10px auto;
+  padding: 0 10px;
+}
+.skills-item-box{
+  width: 33.33333%;
+}
+.skills-title{
+  font-weight: 700;
+  font-size: 17px;
+  margin-bottom: 10px;
 }
 .skills-tiems {
   display: flex;
@@ -130,6 +191,7 @@
   width: 100%;
   white-space: normal;
   flex-wrap: wrap;
+  padding: 0 10px;
 }
 .skills-tiems li{
   font-size: 18px;
@@ -179,27 +241,16 @@
 }
 
 
-/* 챕터2 영역 */
+/**** 챕터2 영역 ****/
 .chapter2{
-  /* height: 100%; */
   position: relative;
-  background-color: #FFF;
 }
-.chapter2 .inner{
-  /* height: 100%; */
-  color: #0959A9;
-}
-
 /* 커리어 영역 */
 .cureer{
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 0 40px;
 }
 .cureer-item{
   width: 100%;
   color: #333;
-  padding: 0 15px;
   margin: 20px auto;
 }
 .cureer-row{
@@ -259,30 +310,22 @@
   font-size: 16px;
   line-height: 1.2 !important;
   margin-top: 7px;
-  margin-left: 15px;
+  margin-left: 10px;
   color: #8c8f92;
 }
 
 
-/* 챕터2 영역 */
+/**** 챕터3 영역 ****/
 .chapter3{
-  /* height: 100vh; */
   position: relative;
-  background-color: #FFF;
-}
-.chapter3 .inner{
-  height: 100%;
-  padding: 40px 0;
-  color: #0959A9;
 }
 .project{
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 0 40px;
+  padding-top: 100px;
+  margin-bottom: 200px;
 }
 .grid{
-  padding: 0 20px;
-  margin: 20px auto;
+  padding: 0 15px;
+  margin: 40px auto 0;
 }
 .grid_list{
   grid-column-gap: 8px;
@@ -303,40 +346,68 @@
   width: 100%;
 }
 .grid_item .item_inner{
-  background-color: #fff;
+  color: #8D9093;
   border-radius: 12px;
   display: block;
 }
-.item_thumb{
+.grid_item .item_inner:hover{
+  color: #0959A9;
+}
+.project-thumb{
   background-color: #F5F5F5;
   border-radius: 8px;
   overflow: hidden;
   padding-top: 100%;
   position: relative;
 }
-.location_img{
+.project-img{
   height: auto;
   width: 100%;
+  height: 100%;
   left: 50%;
   position: absolute;
   top: 50%;
   -webkit-transform: translate(-50%,-50%);
   transform: translate(-50%,-50%);
+  filter: grayscale(100%);
+  background-repeat: no-repeat;
+}
+.project-img:hover{
+  filter: grayscale(0%);
+}
+.project-img.project1{
+  background-image: url("../assets/project-img/anjinhyeong.png");
+  background-size: 200%;
+  background-position: 50% 55%;
+}
+.project-img.project2{
+  background-image: url("../assets/project-img/daily-diary.png");
+  background-size: 150%;
+  background-position: 50% 55%;
+}
+.project-img.project3{
+  background-image: url("../assets/project-img/funding.png");
+  background-size: 190%;
+  background-position: 50% 55%;
+}
+.project-img.project4{
+  background-image: url("../assets/project-img/bookin.png");
+  background-size: 186%;
+  background-position: 15% 55%;
+}
+.project-info{
+  padding: 0 10px;
+  margin-top: 5px;
+}
+.project-title{
+  font-size: 14px;
 }
 
-/* 푸터 영역 */
+/**** 컨택트 영역 ****/
 .contact{
   position: relative;
   background-color: #FFF;
   margin-bottom: 60px;
 }
-.contact .inner{
-  height: 100%;
-  padding-top: 40px;
-  color: #0959A9;
-}
 .contact-box{
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 0 40px;
 }
