--- a/src/css/main.css
+++ b/src/css/main.css
@@ -122,20 +122,20 @@
   width: 100%;
   margin-bottom: 15px;
 }
-.skills-tiems.profile{
-  margin: 0;
-  padding: 0;
-}
 .profile-name{
-  font-size: 26px;
+  font-size: 30px;
   margin-bottom: 20px;
 }
 .profile-birth{
-  font-size: 22px;
+  font-size: 20px;
 }
 .profile-contant{
   font-size: 16px;
-  margin-bottom: 4px;
+  margin-bottom: 5px;
+}
+.skills-tiems.profile{
+  margin: 0;
+  padding: 0;
 }
 .skills-tiems.profile li{
   font-size: 13px;
@@ -151,6 +151,32 @@
 }
 .skills-tiems.profile li:last-child{
   margin-right: 0;
+}
+.skills-tiems.pagelink{
+  margin: 0;
+  padding: 0;
+}
+.skills-tiems.pagelink li{
+  font-size: 13px;
+  color: #FFF;
+  border-radius: 6px;
+  padding: 4px 6px;
+  margin: 0 12px 0 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.skills-tiems.pagelink li:last-child{
+  margin-right: 0;
+}
+.skills-tiems.pagelink .github{
+  background-color: #333;
+  border: 1px solid #333;
+}
+.skills-tiems.pagelink .linkedin{
+  background-color: #0A66C2;
+  border: 1px solid #0A66C2;
 }
 
 
@@ -320,8 +346,7 @@
   position: relative;
 }
 .project{
-  padding-top: 100px;
-  margin-bottom: 200px;
+  margin: 100px auto 200px;
 }
 .grid{
   padding: 0 15px;
