--- a/src/css/main.css
+++ b/src/css/main.css
@@ -421,8 +421,7 @@
   background-position: 15% 55%;
 }
 .project-info{
-  padding: 0 10px;
-  margin-top: 5px;
+  margin: 5px 0 0 5px;
 }
 .project-title{
   font-size: 14px;
