--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,7 +7,7 @@
 .mainbanner{
   width: 100%;
   height: 100vh;
-  background-image: url("../assets/banner1.png");
+  background-image: url("../assets/img/main/banner1.png");
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: cover;
@@ -107,7 +107,7 @@
   width: 200px;
   height: 200px;
   border-radius: 50%;
-  background-image: url("../assets/profile.jpeg");
+  background-image: url("../assets/img/main/profile.jpeg");
   background-size: 130%;
   background-position: 80% 100%;
   background-repeat: no-repeat;
@@ -171,12 +171,24 @@
   margin-right: 0;
 }
 .skills-tiems.pagelink .github{
-  background-color: #333;
+  color: #333;
+  /* background-color: #333; */
   border: 1px solid #333;
 }
+.skills-tiems.pagelink .github .github-icon{
+  width: 14px;
+  height: 14px;
+  margin-right: 3px;
+}
 .skills-tiems.pagelink .linkedin{
-  background-color: #0A66C2;
-  border: 1px solid #0A66C2;
+  color: #0A66C2;
+  background-color: #FFF;
+  /* border: 1px solid #0A66C2; */
+}
+.skills-tiems.pagelink .linkedin .likedin-icon{
+  width: 14px;
+  height: 14px;
+  margin-right: 3px;
 }
 
 
@@ -401,22 +413,22 @@
   filter: grayscale(0%);
 }
 .project-img.project1{
-  background-image: url("../assets/project-img/anjinhyeong.png");
+  background-image: url("../assets/img/project-banner/anjinhyeong.png");
   background-size: 200%;
   background-position: 50% 55%;
 }
 .project-img.project2{
-  background-image: url("../assets/project-img/daily-diary.png");
+  background-image: url("../assets/img/project-banner/daily-diary.png");
   background-size: 150%;
   background-position: 50% 55%;
 }
 .project-img.project3{
-  background-image: url("../assets/project-img/funding.png");
+  background-image: url("../assets/img/project-banner/funding.png");
   background-size: 190%;
   background-position: 50% 55%;
 }
 .project-img.project4{
-  background-image: url("../assets/project-img/bookin.png");
+  background-image: url("../assets/img/project-banner/bookin.png");
   background-size: 186%;
   background-position: 15% 55%;
 }
