--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -17,6 +17,7 @@
   max-width: 730px;
   height: 90vh;
   padding: 40px 50px;
+  overflow: scroll;
 }
 .modal-title > .title{
   font-size: 32px;
@@ -29,11 +30,19 @@
   height: 300px;
   margin-bottom: 38px;
 }
-.modal-mainimg > .img{
+.modal-mainimg > .img.ajh{
   width: 100%;
   height: 100%;
   background-image: url('../assets/img/project-banner/anjinhyeong.png');
   background-size: 100%;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+}
+.modal-mainimg > .img.diary{
+  width: 100%;
+  height: 100%;
+  background-image: url('../assets/img/project-shot/diary/shot.png');
+  background-size: 85%;
   background-position: 50% 50%;
   background-repeat: no-repeat;
 }
@@ -89,4 +98,34 @@
 .modal-line{
   margin: 20px 0;
   border-bottom: 1px solid #0959A9;
+}
+
+.modal-project-shotimg{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 0 10px;
+}
+.project-shot-item{
+  width: 50%;
+}
+.modal-project-detail{
+  padding: 0 10px;
+}
+.modal-project-detail > .title{
+  border: none;
+  font-size: 16px;
+  padding: 15px 0;
+}
+.modal-project-detail > .title-img{
+  width: 100%;
+  height: 100%;
+  padding: 15px 0;
+}
+.modal-project-detail > .contant{
+  padding: 0 3px;
+  font-size: 14px;
+  color: #B3B4B6;
+  margin-bottom: 10px;
 }
