--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -56,7 +56,7 @@
   width: 100%;
   height: 100%;
   background-image: url('../assets/img/project-banner/funding.png');
-  background-size: 100%;
+  background-size: 90%;
   background-position: 50% 50%;
   background-repeat: no-repeat;
 }
@@ -141,6 +141,11 @@
   border: none;
   font-size: 16px;
   padding: 15px 0;
+}
+.modal-project-detail > .sub-title{
+  border: none;
+  font-size: 14px;
+  padding: 10px 2px;
 }
 .modal-project-detail > .title-img{
   width: 100%;
