--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -18,6 +18,17 @@
   height: 90vh;
   padding: 40px 50px;
   overflow: scroll;
+  position: relative;
+}
+.close-btn{
+  position: absolute;
+  font-size: 13px;
+  right: 10px;
+  top: 9px;
+  color: #B3B4B6;
+  font-family: 'Lemon', serif;
+  cursor: pointer;
+  display: none;
 }
 .modal-sub-title{
   color: #B3B4B6;
@@ -157,4 +168,57 @@
   font-size: 14px;
   color: #B3B4B6;
   margin-bottom: 10px;
+}
+
+/* 테블릿 세로 (해상도 768px ~ 1023px)*/
+@media all and (min-width:768px) and (max-width:1023px){
+ 
+}
+
+/* 모바일 가로, 테블릿 세로 (해상도 480px ~ 767px)*/
+@media all and (min-width:480px) and (max-width:767px) {
+  .modal-inner{
+    width:  90vw;
+    height: 90vh;
+    padding: 40px 50px;
+    overflow: scroll;
+  }
+  .close-btn{
+    display: block;
+  }
+  .modal-title > .title {
+    font-size: 28px;
+    margin-bottom: 15px;
+  }
+  .modal-mainimg{
+    height: 250px;
+    margin-bottom: 30px;
+  }
+  .project-shot-item {
+    width: 100%;
+  }
+}
+
+/* 모바일 가로, 테블릿 세로 (해상도 ~ 479px)*/
+@media all and (max-width:479px){
+  .modal-inner{
+    width:  90vw;
+    height: 90vh;
+    padding: 40px 50px;
+    overflow: scroll;
+  }
+  .close-btn{
+    display: block;
+  }
+  .modal-title > .title {
+    font-size: 28px;
+    margin-bottom: 15px;
+  }
+  .modal-mainimg{
+    height: 150px;
+    margin-bottom: 30px;
+  }
+  .project-shot-item {
+    width: 100%;
+  }
 }
