모달 max 사이즈 변경

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -34,6 +34,7 @@
   font-size: 20px;
   border-bottom: 1px solid #0959A9;
   padding-bottom: 6px;
+  text-align: left;
 }
 /* 메인 챕터 영역 */
 .chapter{
