--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -44,7 +44,7 @@
 }
 .modal-mainimg{
   width: 100%;
-  height: 300px;
+  height: 500px;
   margin-bottom: 38px;
 }
 .modal-mainimg > .img.ajh{
@@ -152,6 +152,7 @@
   border: none;
   font-size: 16px;
   padding: 15px 0;
+  font-weight: 700;
 }
 .modal-project-detail > .sub-title{
   border: none;
@@ -173,7 +174,9 @@
 
 /* 테블릿 세로 (해상도 768px ~ 1023px)*/
 @media all and (min-width:768px) and (max-width:1023px){
- 
+  .modal-mainimg{
+    height: 300px;
+  }
 }
 
 /* 모바일 가로, 테블릿 세로 (해상도 480px ~ 767px)*/
